--- a/docs/cv/cv.tex
+++ b/docs/cv/cv.tex
@@ -27,8 +27,19 @@ Genetic Programming (GP)
 
 
 \section{EDUCATION}
+PhD Computer Science
+\hfill September 2018 \textemdash{} Present \\
+\href{http://www.imperial.ac.uk}{Imperial College}, London.
+
+\vspace{0.1em}
+\begin{adjustwidth}{2.0em}{2.0em}
+	Advisor: Prof Stefan Leutenegger \\
+	Concentration: SLAM, VIO, Multi-Sensor Calibration
+\end{adjustwidth}
+
+
 MASc Mechanical Engineering
-\hfill September 2015 \textemdash{} August 2018 (expected) \\
+\hfill September 2015 \textemdash{} August 2018 \\
 \href{http://www.uwaterloo.ca}{University of Waterloo}, Canada.
 
 \vspace{0.1em}
