--- a/docs/cv/cv.tex
+++ b/docs/cv/cv.tex
@@ -51,19 +51,19 @@ MASc Mechanical Engineering
 
 
 MSc Advanced Computer Science
-\hfill September 2011 \textemdash{} September 2012 (1 year) \\
+\hfill September 2011 \textemdash{} September 2012 \\
 \href{http://www.st-andrews.ac.uk}{University of St Andrews}, Scotland
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
 	Concentration: Data mining, Software Engineering \\
-	Modules: Advanced Softare Engineering, Advanced A.I., Advanced Network 
+	Modules: Advanced Softare Engineering, Advanced A.I., Advanced Network
 	and Distributed Systems, Softare Architecture, Language Perception.
 \end{adjustwidth}
 
 
 BSc Computational Physics
-\hfill September 2007 \textemdash{} June 2011 (4 years) \\
+\hfill September 2007 \textemdash{} June 2011 \\
 \href{http://www.hw.ac.uk}{Heriot­Watt University}, Scotland
 
 \vspace{0.1em}
@@ -84,8 +84,8 @@ Software Engineer Intern
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-    At \href{http://cask.io}{Cask Data} I implemented an Integration Testing 
-    Framework in Python. My second and current experience is at 
+    At \href{http://cask.io}{Cask Data} I implemented an Integration Testing
+    Framework in Python. My second and current experience is at
     \href{http://loopup.com}{LoopUp}, a call conferencing
     company where I am creating a fraud notification system, the system is
     was implemented in Python and Flask.
@@ -98,8 +98,8 @@ Research Assistant
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-    Surveyed NoSQL databases such as MongoDB and CouchBase, and presented 
-    my work at the International Symposium on Grids and Clouds (ISGC) 
+    Surveyed NoSQL databases such as MongoDB and CouchBase, and presented
+    my work at the International Symposium on Grids and Clouds (ISGC)
     in Taipei, Taiwan.
 \end{adjustwidth}
 
@@ -123,8 +123,8 @@ Bioinformatics Summer Internship
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
     Helped Dr T.Waibel analyze his sequenced data to identify key gene regulators
-    in Taxol bio-synthesis found in Yew trees. Taxol (a.k.a Paclitaxel) is 
-    one of the major chemotherapy drug used to treat patients with lung, 
+    in Taxol bio-synthesis found in Yew trees. Taxol (a.k.a Paclitaxel) is
+    one of the major chemotherapy drug used to treat patients with lung,
     ovarian, breast, head and neck cancer.
 \end{adjustwidth}
 
@@ -137,9 +137,9 @@ Physics Summer Internship
 \begin{adjustwidth}{2.0em}{2.0em}
     Ported a computer program called Rivetgun to work under
     \href{https://boinc.berkeley.edu/} {BOINC}\@. The work required C/C++
-    programming and system administration under Debian Linux. I also built 
+    programming and system administration under Debian Linux. I also built
     temperature sensors to monitor the High Throughput Cluster at Queen Mary.
-    Temperature values were then logged to a web based system monitoring 
+    Temperature values were then logged to a web based system monitoring
     software called Zabbix.
 \end{adjustwidth}
 
@@ -153,7 +153,7 @@ Physics Summer Internship
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-	Designed and built a custom quadrotor with a gimbal camera using off the shelf 
+	Designed and built a custom quadrotor with a gimbal camera using off the shelf
 	components.	Additionally I collected over 50 different flight data used towards a novel camera to gimbal camera extrinsics calibration research paper.
 \end{adjustwidth}
 
@@ -165,8 +165,8 @@ Physics Summer Internship
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
 	Implemented combination of linear flight controllers and Kalman filters to perform
-	vision-based autonomous quadrotor landing using C++ and ROS. Made performance 
-	tweaks to the vision processing of AprilTag detection for a 1.5x to 2x speed up, 
+	vision-based autonomous quadrotor landing using C++ and ROS. Made performance
+	tweaks to the vision processing of AprilTag detection for a 1.5x to 2x speed up,
 	and added robustness under different lighting conditions.
 \end{adjustwidth}
 
@@ -176,9 +176,9 @@ Physics Summer Internship
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-    A meta-heuristic library implemented in python. The most impressive feature 
-    is symbolic regression where it regresses mathematical variables and constants, 
-    not just model parameters 
+    A meta-heuristic library implemented in python. The most impressive feature
+    is symbolic regression where it regresses mathematical variables and constants,
+    not just model parameters
     \href{https://www.youtube.com/watch?v=dPjBrLjSBl4}{(Demo)}.
 \end{adjustwidth}
 
@@ -194,12 +194,12 @@ Physics Summer Internship
 
 
 
-\section{PUBLICATIONS} 
+\section{PUBLICATIONS}
 
 \begin{adjustwidth}{2.0em}{2.0em}
-	C. L. Choi, J. Rebello, L. Koppel, P. Ganti, A. Das, S. L. Waslander. 
-	``Encoderless Gimbal Calibration of Dynamic Multi-Camera Clusters". 
-	IEEE International Conference on Robotics and Automation (ICRA), 
+	C. L. Choi, J. Rebello, L. Koppel, P. Ganti, A. Das, S. L. Waslander.
+	``Encoderless Gimbal Calibration of Dynamic Multi-Camera Clusters".
+	IEEE International Conference on Robotics and Automation (ICRA),
 	Brisbane, 2018.
 \end{adjustwidth}
 
@@ -211,11 +211,11 @@ Physics Summer Internship
 \hfill Feburary 2014
 
 \begin{adjustwidth}{2.0em}{2.0em}
-    My team and I created Streamy, a product that uses Twitter to locate 
-    and target users close to the news worthy locations to stream live video 
-    from their phone. Using only HTML5 and JavaScript we were able to access 
-    the user's phone camera directly and stream the video back to a 
-    centralized server without requiring the user download any phone specific 
+    My team and I created Streamy, a product that uses Twitter to locate
+    and target users close to the news worthy locations to stream live video
+    from their phone. Using only HTML5 and JavaScript we were able to access
+    the user's phone camera directly and stream the video back to a
+    centralized server without requiring the user download any phone specific
     app, check out this \href{http://www.youtube.com/watch?v=JjMc1OaKEU0}{demo}.
 \end{adjustwidth}
 
