--- a/docs/cv/cv.tex
+++ b/docs/cv/cv.tex
@@ -69,8 +69,8 @@ BSc Computational Physics
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
 	Concentration: Chaos Theory, Fast Fourier Transform \\
-	Modules: Remote Sensing and Energy Studies, Applied Quantum Theory and Spectroscopy,
-	Physical Mathematics.
+  Modules: Remote Sensing and Energy Studies, Applied Quantum Theory and
+  Spectroscopy, Physical Mathematics.
 \end{adjustwidth}
 
 
@@ -80,21 +80,22 @@ BSc Computational Physics
 Software Engineer Intern
 \hfill September 2014 \textemdash{} September 2015 (1 year) \\
 \href{http://www.siliconvalleyinternship.com/}
-{Silicon Valley Internship Programme (SVIP)}, San-Francisco, USA
+{Silicon Valley Internship Programme (SVIP)}, San-Francisco, USA.
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-    At \href{http://cask.io}{Cask Data} I implemented an Integration Testing
-    Framework in Python. My second and current experience is at
-    \href{http://loopup.com}{LoopUp}, a call conferencing
-    company where I am creating a fraud notification system, the system is
-    was implemented in Python and Flask.
+  At \href{http://cask.io}{Cask Data} I implemented an Integration Testing
+  Framework in Python. My second and current experience is at
+  \href{http://loopup.com}{LoopUp}, a call conferencing company where I am
+  creating a fraud notification system, the system is was implemented in Python
+  and Flask.
 \end{adjustwidth}
 
 
 Research Assistant
 \hfill September 2012 \textemdash{}  May 2013 (9 months) \\
-\href{http://www.st-andrews.ac.uk}{University of St Andrews}, St-Andrews, Scotland
+\href{http://www.st-andrews.ac.uk}{University of St Andrews}, St-Andrews,
+Scotland.
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
@@ -153,21 +154,22 @@ Physics Summer Internship
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-	Designed and built a custom quadrotor with a gimbal camera using off the shelf
-	components.	Additionally I collected over 50 different flight data used towards a novel camera to gimbal camera extrinsics calibration research paper.
+  Designed and built a custom quadrotor with a gimbal camera using off the
+  shelf components.	Additionally I collected over 50 different flight data used
+  towards a novel camera to gimbal camera extrinsics calibration research
+  paper.
 \end{adjustwidth}
 
 
-\href{https://www.youtube.com/watch?v=5EP2ndrXJN}
-{Autonomous Tracking and Landing (ATL)}
+\href{https://github.com/wavelab/atl}{Autonomous Tracking and Landing (ATL)}
 \hfill Janurary 2016 \textemdash{} March 2017
 
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
-	Implemented combination of linear flight controllers and Kalman filters to perform
-	vision-based autonomous quadrotor landing using C++ and ROS. Made performance
-	tweaks to the vision processing of AprilTag detection for a 1.5x to 2x speed up,
-	and added robustness under different lighting conditions.
+  Implemented combination of linear flight controllers and Kalman filters to
+  perform vision-based autonomous quadrotor landing using C++ and ROS. Made
+  performance tweaks to the vision processing of AprilTag detection for a 1.5x
+  to 2x speed up, and added robustness under different lighting conditions.
 \end{adjustwidth}
 
 
@@ -177,8 +179,8 @@ Physics Summer Internship
 \vspace{0.1em}
 \begin{adjustwidth}{2.0em}{2.0em}
     A meta-heuristic library implemented in python. The most impressive feature
-    is symbolic regression where it regresses mathematical variables and constants,
-    not just model parameters
+    is symbolic regression where it regresses mathematical variables and
+    constants, not just model parameters
     \href{https://www.youtube.com/watch?v=dPjBrLjSBl4}{(Demo)}.
 \end{adjustwidth}
 
