Remove jprep and update CV

--- a/docs/cv/cv.tex
+++ b/docs/cv/cv.tex
@@ -14,7 +14,7 @@
 \name{Christopher L. Choi}
 
 \address{Email: \href{mailto:chutsu@gmail.com}{chutsu@gmail.com}}
-\address{ebsite: \href{http://chutsu.github.io}{http://chutsu.github.io}}
+\address{Website: \href{http://chutsu.github.io}{http://chutsu.github.io}}
 
 
 \begin{resume}
