--- a/docs/cv/cv.tex
+++ b/docs/cv/cv.tex
@@ -20,7 +20,9 @@
 \begin{resume}
 
 \section{RESEARCH INTERESTS}
-Visual Inertial Odometry (VIO) \\
+SLAM \\
+VIO \\
+Visual inertial sensor calibration \\
 Micro-aerial vehicles (MAVs) \\
 Genetic Programming (GP)
 
